[project]
name = "aanet"
version = "0.1.0"
description = "AAnet is a tool for scalable Archetypal Analysis of large and potentially non-linear datasets."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "graphtools>=1.5.3",
    "matplotlib>=3.9.4",
    "networkx>=3.2.1",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "tensorflow>=2.14.0",
]
